ubiquity (2.9.6) UNRELEASED; urgency=low

  * Build-depend/depend on python-gi-cairo/python-gi-dev rather than
    python-gobject-cairo/python-gobject-dev.
  * Automatic update of included source packages: flash-kernel 2.28ubuntu35,
    hw-detect 1.88ubuntu1, localechooser 2.39ubuntu1, partman-uboot 5.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 01 Dec 2011 14:06:38 +0000

ubiquity (2.9.5) precise; urgency=low

  * Automatic update of included source packages: console-setup 1.70ubuntu2,
    partman-base 151ubuntu3.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 25 Nov 2011 18:03:57 +0000

ubiquity (2.9.4) precise; urgency=low

  * Whitelist grub_device_label in test_interface_translated on non-x86
    architectures; grub-installer will be unavailable to supply the
    translations, but that doesn't matter since the template won't be
    displayed anyway.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 22 Nov 2011 00:31:56 +0000

ubiquity (2.9.3) precise; urgency=low

  [ Mario Limonciello ]
  * When installing oem extras, query for all packages marked to be installed
    via plugins, not just langpacks.
  * Properly build the manifest used for remove oem extras.

  [ Colin Watson ]
  * ubiquity depends on wget (LP: #877187).
  * ubiquity-frontend-gtk depends on python-gobject-cairo (LP: #877223).
  * ubiquity depends on grub-common on amd64 and i386 (LP: #877230).
  * Remove /usr/lib/libubiwebcam.la.  Nothing uses this, and its
    dependency_libs entries don't match current reality.
  * Automatic update of included source packages: apt-setup 1:0.55ubuntu1,
    base-installer 1.122ubuntu1, choose-mirror 2.39ubuntu1, clock-setup
    0.109ubuntu1, console-setup 1.70ubuntu1, debian-installer-utils
    1.87ubuntu1, hw-detect 1.87ubuntu1, localechooser 2.38ubuntu1,
    partman-ext3 66ubuntu1, partman-partitioning 83ubuntu1, partman-target
    76ubuntu1, user-setup 1.39ubuntu2.

  [ Evan Dandrea ]
  * Add missing template for the connecting label.

  [ Luke Yelavich ]