@@ -201,7 +201,7 @@ endif
 		d-i/source/debian-installer-utils/post-base-installer.d/10register-module \
 		> debian/oem-config/usr/lib/ubiquity/debian-installer-utils/register-module.post-base-installer-oem
 	chmod +x debian/oem-config/usr/lib/ubiquity/debian-installer-utils/register-module.post-base-installer-oem
-ifeq ($(DEB_HOST_ARCH),armel)
+ifneq (,$(filter armel armhf,$(DEB_HOST_ARCH)))
 	install d-i/source/flash-kernel/debian/flash-kernel-installer.postinst \
 		debian/ubiquity/usr/lib/ubiquity/flash-kernel/flash-kernel-installer
 endif
